--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(JustinWorkout)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(JustinWorkout workout.cpp exercise.cpp main.cpp )
+add_executable(JustinWorkout setup.cpp workout.cpp exercise.cpp main.cpp )
